[build-system]
requires = ["scikit-build-core>=0.10.7", "nanobind>=2.3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "carto_py"
version = "0.1.0"
description = "Python bindings for Google Cartographer"
authors = [{name = "Vadimych1", email = "vadimlebedenko0@gmail.com"}]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
editable.rebuild = true